@@ -1,3 +1,9 @@
+Fri Sep 10 21:30:03 BST 1999  Alex Roberts  <bse@gedit.pn.org>
+
+	* src/commands.c: (tab_pos) New function. Changes the tab position over all 
+	  the open wnidows. Dont have to create a new window to see the changes take
+	  effect.
+
 Fri Sep 10 18:47:17 BST 1999  Alex Roberts  <bse@gedit.pn.org>
 
 	* src/gE_view.c: (gE_event_key_press) Added keypress event shortcuts. ^S, ^P
